tests/NormalTests/paczka1/fuzzy1/86711255.err
Error in line 3: xeq S556 -3,12
Error in line 5: S556 A643 88,6
Error in line 10: Pis A643 26,8
Error in line 6: VwWIceMWJ0t S756 69,1
Error in line 12: VwWIceMWJ0t S556 16,4
Error in line 1: xeq S556 46,5
Error in line 26: Pis A643 68,0
Error in line 27: Pis S835 0,3
Error in line 9: S556 S756 69,1
Error in line 33: xeq S556 89,9
Error in line 30: LHav0lVb S556 44,4
Error in line 35: LHav0lVb A643 18,6
